--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-  <title>Miracle StoneX</title>
+  <title>Miracle Stonex</title>
 </head>
 
 <body>
@@ -45,6 +45,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script type="text/javascript"
+    id="zsiqchat">var $zoho = $zoho || {}; $zoho.salesiq = $zoho.salesiq || { widgetcode: "eafd44db695a62a574a4e2ed1116129ba1f2ebe4b3493a9e6ec172bec1a9d70aafe775caba270a68d4616aee6075a797d45688b0b779b00101547b5bd8012454", values: {}, ready: function () { } }; var d = document; s = d.createElement("script"); s.type = "text/javascript"; s.id = "zsiqscript"; s.defer = true; s.src = "https://salesiq.zoho.in/widget"; t = d.getElementsByTagName("script")[0]; t.parentNode.insertBefore(s, t);</script>
 </body>
 
 </html>
